--- a/src/Features/Risk/GoalProgressMenu/GoalProgressMenu.scss
+++ b/src/Features/Risk/GoalProgressMenu/GoalProgressMenu.scss
@@ -1,12 +1,132 @@
+.container {
+	position: relative;
+	width: 100%;
+	height: 36px;
+}
+.cursor-pointer {
+	cursor: pointer;
+}
+
+.progress-bar {
+	width: 100%;
+}
+.counter {
+	display: flex;
+	align-items: center;
+
+	.current-progress {
+		color: rgba(33, 38, 46, 1);
+		margin-right: 4px;
+	}
+
+	.divider {
+		color: rgba(108, 117, 132, 1);
+		margin-right: 4px;
+	}
+
+	.total-goals {
+		color: rgba(108, 117, 132, 1);
+	}
+}
+
+.goal-content {
+	display: flex;
+	align-items: center;
+	flex: 1;
+	gap: 8px;
+}
+.goal-item {
+	display: flex;
+	gap: 8px;
+	align-items: center;
+	margin: 8px 0;
+}
+.counter-value {
+	color: rgba(33, 38, 46, 1);
+	margin-right: 4px;
+}
+.sunday-icon-wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 32px;
+	height: 32px;
+	border-radius: 50%;
+	background-color: rgba(59, 141, 245, 0.12);
+}
+
+.counter-divider,
+.counter-total {
+	color: rgba(108, 117, 132, 1);
+	margin-right: 4px;
+}
+
+.day-button-wrapper {
+	display: flex;
+	align-items: center;
+	gap: 8px;
+}
+
+.sunday-icon-wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 32px;
+	height: 32px;
+	border-radius: 50%;
+	background-color: rgba(59, 141, 245, 0.12);
+}
+
+.goal-item {
+	display: flex;
+	gap: 8px;
+	align-items: center;
+	margin: 8px 0;
+}
+
+.goal-item-content {
+	display: flex;
+	align-items: center;
+	flex: 1;
+	gap: 8px;
+}
+
+.edit-goals {
+	margin-top: 16px;
+	padding: 10px 20px;
+	cursor: pointer;
+	gap: 8px;
+	color: #0041c4;
+	font-weight: 500;
+	display: flex;
+	align-items: center;
+}
+
 .button {
 	position: relative;
 	padding: 5px 20px;
+	min-width: 720px;
 	background: linear-gradient(90deg, #f1f3f7 0.19%, #d3def5 64.56%);
 	border: none;
 	border-radius: 8px;
 	cursor: pointer;
 	display: flex;
 	align-items: center;
+
+	&.open {
+		border-bottom-left-radius: 0;
+		border-bottom-right-radius: 0;
+	}
+}
+
+.goal-text {
+	flex: 1;
+	color: var(--Neutral-text, #0b101a);
+	text-overflow: ellipsis;
+	font-size: 12px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: var(--Font-line-height-S, 16px);
 }
 
 .chevron {
@@ -44,7 +164,7 @@
 	left: 0;
 	top: 0;
 	height: 100%;
-	border-radius: 9999px;
+	border-radius: 9999px 0 0 9999px;
 	transition: width 0.3s;
 	background: linear-gradient(90deg, #2563eb 0%, #60a5fa 100%);
 	display: flex;
@@ -54,7 +174,7 @@
 .handle {
 	position: absolute;
 	top: 50%;
-	right: 0;
+	right: -5px;
 	transform: translateY(-50%);
 	width: 6px;
 	height: 12px;
@@ -85,23 +205,126 @@
 
 .dropdown {
 	position: absolute;
+	padding: 0px 20px 20px 20px;
 	left: 0;
-	width: 100%;
-	background-color: white;
+	width: 94.9%;
+	background: linear-gradient(90deg, #f1f3f7 0.19%, #d3def5 64.56%);
 	border-radius: 8px;
-	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-	border: 1px solid #e5e7eb;
+	box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.1);
 	z-index: 9999;
+
+	.button.open + & {
+		border-top-left-radius: 0;
+		border-top-right-radius: 0;
+	}
 }
 
 .goal-item {
-	padding: 16px;
+	position: relative;
+	border-radius: 0px 0px 0px 4px;
+	border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+	border-left: 1px solid rgba(255, 255, 255, 0.5);
+	backdrop-filter: blur(1px);
+	padding: 8px 12px;
 	display: flex;
 	align-items: center;
-	gap: 12px;
-	border-bottom: 1px solid #e5e7eb;
+	gap: 8px;
+	transition: all 0.2s ease;
+
+	&::after {
+		content: "";
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 0;
+		height: 0;
+		border-bottom: 2px solid rgba(59, 141, 245, 1);
+		border-left: 2px solid rgba(59, 141, 245, 1);
+		border-radius: 0px 0px 0px 4px;
+		transition:
+			width 0.3s ease,
+			height 0.3s ease;
+
+		opacity: 0;
+		pointer-events: none;
+	}
+
+	&:hover {
+		background-color: rgba(59, 141, 245, 0.05);
+		border-bottom: 1px solid rgba(59, 141, 245, 0.2);
+		border-left: 1px solid rgba(59, 141, 245, 0.2);
+
+		&::after {
+			width: 10px;
+			height: 10px;
+			opacity: 1;
+		}
+	}
 }
 
 .goal-item:last-child {
 	border-bottom: none;
+}
+
+.days-wrapper {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 8px;
+}
+
+.day-button {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	padding: 8px;
+	gap: 12px;
+	border-radius: 100px;
+	background: linear-gradient(
+		293deg,
+		rgba(255, 255, 255, 0.35) 0.1%,
+		rgba(255, 255, 255, 0.5) 100%
+	);
+	border: none;
+	cursor: pointer;
+	font-size: 14px;
+	color: #4b5563;
+	transition: background 0.3s ease;
+
+	&:hover {
+		background: linear-gradient(
+			293deg,
+			rgba(255, 255, 255, 0.5) 0.1%,
+			rgba(255, 255, 255, 0.7) 100%
+		);
+	}
+
+	&.active {
+		background: rgba(13, 120, 251, 1);
+		color: #ffffff;
+	}
+
+	svg {
+		flex-shrink: 0;
+	}
+}
+
+.day-button.active {
+	background: rgba(13, 120, 251, 1);
+	color: #ffffff;
+}
+
+.stats-badge {
+	padding: 4px 12px;
+	border-radius: 100px;
+	border: 1px solid var(--neutral-background-background-base, #fff);
+	font-size: 12px;
+	color: #4b5563;
+	background: linear-gradient(
+		293deg,
+		rgba(255, 255, 255, 0.28) 0.1%,
+		rgba(255, 255, 255, 0.4) 100%
+	);
+	font-weight: bold;
+	white-space: nowrap;
 }
