--- a/src/Features/Risk/GoalProgressMenu/GoalProgressMenu.scss
+++ b/src/Features/Risk/GoalProgressMenu/GoalProgressMenu.scss
@@ -105,7 +105,7 @@
 .button {
 	position: relative;
 	padding: 5px 20px;
-	min-width: 720px;
+	// min-width: 720px;
 	background: linear-gradient(90deg, #f1f3f7 0.19%, #d3def5 64.56%);
 	border: none;
 	border-radius: 8px;
