--- a/src/Views/DetailedRisk/DetailedRisk.module.scss
+++ b/src/Views/DetailedRisk/DetailedRisk.module.scss
@@ -103,6 +103,17 @@
 	flex-direction: column;
 	gap: 16px;
 	flex: 1;
+	width: 50%;
+
+	iframe {
+		width: 102% !important;
+		overflow: hidden;
+		display: flex;
+		justify-content: center;
+		position: absolute;
+		left: -1px;
+		top: -2px;
+	}
 }
 
 .DetailerRisk-iframe-loading {
