--- a/src/Features/Onboarding/NavigationBar/NavigationBar.module.scss
+++ b/src/Features/Onboarding/NavigationBar/NavigationBar.module.scss
@@ -19,6 +19,13 @@
 	}
 
 	.back {
+		color: var(--p-color-text, rgba(33, 38, 46, 1));
+
+		font-family: var(--Font-family-body, Inter);
+		font-size: var(--Font-size-S, 14px);
+		font-style: normal;
+		font-weight: 600;
+		line-height: var(--Font-line-height-M, 20px);
 		border-radius: var(
 			---Buttons-and-Inputs-button-border-radius-primary,
 			999px
@@ -34,10 +41,29 @@
 			999px
 		);
 		background: #1f1f1f;
-		color: white;
+
+		color: var(--p-color-text-inverse, rgba(239, 240, 241, 1));
+
+		font-family: var(--Font-family-body, Inter);
+		font-size: var(--Font-size-S, 14px);
+		font-style: normal;
+		font-weight: 600;
+		line-height: var(--Font-line-height-M, 20px);
 
 		&:hover {
-			border-color: white;
+			border-radius: var(
+				---Buttons-and-Inputs-button-border-radius-primary,
+				999px
+			);
+			background: var(--p-color-bg-fill-inverse-active, rgba(54, 60, 71, 1));
+		}
+
+		&:active {
+			border-radius: var(
+				---Buttons-and-Inputs-button-border-radius-primary,
+				999px
+			);
+			background: var(--p-color-bg-fill-inverse, rgba(33, 38, 46, 1));
 		}
 	}
 
@@ -55,5 +81,10 @@
 		font-style: normal;
 		font-weight: 600;
 		line-height: var(--Font-line-height-M, 20px); /* 142.857% */
+
+		&:hover {
+			background: var(--p-color-bg-fill-transparent, rgba(108, 117, 132, 0.12));
+			border: none;
+		}
 	}
 }
