--- a/src/Features/Onboarding/Upload/Components/UploadProcess/UploadProcess.module.scss
+++ b/src/Features/Onboarding/Upload/Components/UploadProcess/UploadProcess.module.scss
@@ -100,6 +100,33 @@
 			}
 		}
 	}
+
+	.submit {
+		display: flex;
+		gap: 2px;
+		border-radius: var(
+			---Buttons-and-Inputs-button-border-radius-primary,
+			999px
+		);
+		background: #1f1f1f;
+		color: white;
+
+		&:hover {
+			border-radius: var(
+				---Buttons-and-Inputs-button-border-radius-primary,
+				999px
+			);
+			background: var(--p-color-bg-fill-inverse-active, rgba(54, 60, 71, 1));
+		}
+
+		&:active {
+			border-radius: var(
+				---Buttons-and-Inputs-button-border-radius-primary,
+				999px
+			);
+			background: var(--p-color-bg-fill-inverse, rgba(33, 38, 46, 1));
+		}
+	}
 }
 
 .right-side {
