--- a/src/Features/Onboarding/UploadMethod/Components/ConfigItemCard/ConfirmCard.module.scss
+++ b/src/Features/Onboarding/UploadMethod/Components/ConfigItemCard/ConfirmCard.module.scss
@@ -37,6 +37,14 @@
 		box-shadow 0.3s ease,
 		border-radius 0.3s ease,
 		background 0.3s ease;
+
+	&-disabled {
+		background: rgba(204, 198, 198, 0.6);
+	}
+
+	&-disabled:hover {
+		background: rgba(204, 198, 198, 0.6) !important;
+	}
 }
 
 @keyframes fadeIn {
@@ -75,6 +83,14 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+
+	&-disabled {
+		background: rgba(204, 198, 198, 0.6);
+	}
+
+	&-disabled:hover {
+		background: rgba(204, 198, 198, 0.6) !important;
+	}
 }
 
 .item-card-icon-hover {
