--- a/src/Features/Dashboard/ConcernsWidget/Components/ReasonRow/ReasonRow.module.scss
+++ b/src/Features/Dashboard/ConcernsWidget/Components/ReasonRow/ReasonRow.module.scss
@@ -117,9 +117,16 @@
 		rgba(231, 72, 80, 0.5) 100%
 	);
 
-	Selection colors RGB &-hidden {
+	&-hidden {
 		visibility: hidden;
 	}
+}
+
+.ReasonRow-image {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	width: 80px;
 }
 
 .ReasonRow-thumb {
