--- a/src/Features/Risk/RiskStatus/Components/RiskSlider/RiskSlider.module.scss
+++ b/src/Features/Risk/RiskStatus/Components/RiskSlider/RiskSlider.module.scss
@@ -87,7 +87,7 @@
 	width: 33%;
 	height: 100%;
 	background: linear-gradient(90deg, #ff6518 0%, #e74850 100%);
-	animation: barFillAnimation 1.5s ease-in-out;
+	animation: barFillAnimation 1.5s ease-in-out forwards;
 	border-radius: 0px 24px 24px 0px;
 	z-index: 1;
 }
@@ -97,15 +97,8 @@
 		width: 0%;
 		opacity: 0;
 	}
-	60% {
-		width: calc(var(--chronoAgePercentage) + 3%);
-		opacity: 1;
-	}
-	80% {
-		width: calc(var(--chronoAgePercentage) - 1%);
-	}
 	100% {
-		width: var(--chronoAgePercentage);
+		opacity: 1;
 	}
 }
 
@@ -129,12 +122,11 @@
 
 @keyframes thumbSlideAnimation {
 	0% {
-		left: 0%;
+		left: 0;
 		opacity: 0;
 	}
 
 	100% {
-		left: var(--bioAgePercentage);
 		opacity: 1;
 	}
 }
