ui: updated System Overview according to new design

--- a/src/Features/Risk/AgeWidget/AgeWidget.module.scss
+++ b/src/Features/Risk/AgeWidget/AgeWidget.module.scss
@@ -4,6 +4,8 @@
 	align-self: stretch;
 	gap: 16px;
 	flex: 1 0 0;
+	box-sizing: border-box;
+	padding: 4px;
 
 	@media (max-width: 1412px) {
 		flex-direction: column;
