--- a/src/Views/SystemOverview/SystemOverview.module.scss
+++ b/src/Views/SystemOverview/SystemOverview.module.scss
@@ -47,14 +47,8 @@
 	overflow-y: auto;
 
 	&.animate > * {
-		animation: slideOutAndIn 1.5s ease-out forwards;
-	}
-
-	@media (max-width: 920px) {
-		width: 100%;
-		&.animate > * {
-			animation: slideOutAndInMobile 1.5s ease-out forwards;
-		}
+		opacity: 0;
+		animation: fadeIn 1.5s ease-out forwards;
 	}
 
 	@for $i from 1 through 10 {
@@ -74,47 +68,11 @@
 	}
 }
 
-@keyframes slideIn {
+@keyframes fadeIn {
 	0% {
-		transform: translateX(100%);
 		opacity: 0;
 	}
 	100% {
-		transform: translateX(0);
-		opacity: 1;
-	}
-}
-
-@keyframes slideOutAndIn {
-	0% {
-		transform: translateX(0);
-		opacity: 1;
-	}
-	50% {
-		transform: translateX(100%);
-		opacity: 0;
-	}
-	100% {
-		transform: translateX(0);
-		opacity: 1;
-	}
-}
-
-@keyframes slideOutAndInMobile {
-	0% {
-		transform: translateX(0);
-		opacity: 1;
-	}
-	50% {
-		transform: translateX(100%);
-		opacity: 0;
-	}
-	51% {
-		transform: translateX(-100%);
-		opacity: 0;
-	}
-	100% {
-		transform: translateX(0);
 		opacity: 1;
 	}
 }
@@ -123,6 +81,19 @@
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
+	gap: 12px;
+}
+
+.SystemOverview-breadcrumbs {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 7px;
+
+	color: rgba(81, 89, 103, 1);
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 20px;
 }
 
 .SystemOverview-back {
@@ -132,7 +103,7 @@
 	gap: 4px;
 	padding: 2px 0;
 
-	color: #3b8df5;
+	color: rgba(108, 117, 132, 1);
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 20px;
@@ -147,16 +118,33 @@
 	}
 
 	&:hover {
-		color: #1158ad;
+		color: rgba(108, 117, 132, 1);
 		svg {
 			transition: all 0.3s ease;
-			transform: scale(1.2);
-			transform-origin: right;
+			transform: scale(1.15);
+		}
+	}
+}
 
-			path {
-				transition: all 0.3s ease;
-				fill: #1158ad;
-			}
+.SystemOverview-system {
+	display: flex;
+	flex-direction: row;
+	gap: 12px;
+	align-items: flex-end;
+}
+
+.SystemOverview-icon-container {
+	display: flex;
+	width: 40px;
+	height: 40px;
+	justify-content: center;
+	align-items: center;
+	border-radius: 8px;
+	background: linear-gradient(270deg, #3b8df5 0%, #0059db 100%);
+
+	svg {
+		path {
+			fill: #ffffff;
 		}
 	}
 }
@@ -167,6 +155,7 @@
 	font-weight: 600;
 	line-height: 32px;
 	margin: 0;
+	text-transform: capitalize;
 }
 
 .SystemOverview-widget-wrapper {
@@ -186,15 +175,15 @@
 .SystemOverview-widget-title-wrapper {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
 	align-items: center;
+	gap: 8px;
 }
 
 .SystemOverview-widget-title {
 	color: rgba(33, 38, 46, 1);
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: 600;
-	line-height: 28px;
+	line-height: 24px;
 	margin: 0;
 }
 
@@ -209,7 +198,7 @@
 .SystemOverview-concern-cards {
 	display: grid;
 	gap: 8px;
-	grid-template-columns: repeat(2, 1fr);
+	grid-template-columns: repeat(3, 1fr);
 }
 
 .SystemOverview-more {
@@ -268,12 +257,65 @@
 
 .SystemOverview-animate {
 	> * {
-		animation: slideInFromLeft 0.8s ease-out forwards;
+		opacity: 0;
+		animation: fadeIn 0.8s ease-out forwards;
 	}
 
 	@for $i from 1 through 10 {
 		> *:nth-child(#{$i}) {
-			animation-delay: calc(0s + ($i - 1) * 0.1s);
+			animation-delay: calc(0s + ($i - 1) * 0.17s);
 		}
 	}
+}
+
+.SystemOverview-tab {
+	background-color: #ffffff;
+	border-top-left-radius: 8px;
+	padding: 6px 10px 3px 20px;
+	font-size: 16px;
+	font-weight: 600;
+	line-height: 24px;
+	color: #0b101a;
+	position: relative;
+	overflow: hidden;
+	background-color: #e4ebf9;
+}
+
+.SystemOverview-tab-container {
+	display: flex;
+	flex-direction: row;
+	position: relative;
+}
+
+.SystemOverview-widgets-content {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	padding: 16px;
+	gap: 16px;
+	border-radius: 0px 12px 12px 12px;
+	background: #e4ebf9;
+}
+
+.SystemOverview-line {
+	width: 100%;
+	height: 1px;
+	opacity: 0.6;
+	background: #ffffff;
+}
+
+.SystemOverview-counter {
+	display: flex;
+	min-width: 20px;
+	min-height: 20px;
+	justify-content: center;
+	align-items: center;
+	border-radius: 24px;
+	background: rgba(59, 141, 245, 1);
+
+	color: rgba(239, 240, 241, 1);
+	text-align: center;
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 16px;
 }
