--- a/src/Features/Dashboard/ConcernsWidget/Components/ConcernsCard/ConcernsCard.module.scss
+++ b/src/Features/Dashboard/ConcernsWidget/Components/ConcernsCard/ConcernsCard.module.scss
@@ -31,15 +31,15 @@
 		}
 	}
 
-	&-row {
-		flex-direction: row-reverse;
-		align-items: flex-start;
-		gap: 4px;
-		justify-content: space-between;
+	&-blue {
 		background: rgba(228, 235, 249, 1);
 
 		.ConcernsCard-icon-container {
-			display: none;
+			background-color: #ffffff;
+		}
+
+		.ConcernsCard-status {
+			background: rgba(228, 235, 249, 1);
 		}
 
 		.DetailsCard-question-container {
