--- a/src/Features/Risk/GoalProgressMenu/GoalProgressMenu.scss
+++ b/src/Features/Risk/GoalProgressMenu/GoalProgressMenu.scss
@@ -192,7 +192,7 @@
 	max-width: 35px;
 	text-align: center;
 	display: inline-block;
-	padding: 4px 16px;
+	padding: 2px 6px;
 	border-radius: 9999px;
 	border: 2px solid #fff;
 	margin-right: 15px;
@@ -201,6 +201,10 @@
 		rgba(255, 255, 255, 0.28) 0.1%,
 		rgba(255, 255, 255, 0.4) 100%
 	);
+
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 16px;
 }
 
 .dropdown {
