--- a/src/Features/Structural/NavBar/Components/ManageData/ManageData.module.scss
+++ b/src/Features/Structural/NavBar/Components/ManageData/ManageData.module.scss
@@ -6,7 +6,7 @@
 	cursor: pointer;
 	border-radius: 99px;
 	border: 1px solid rgba(95, 104, 119, 0.1);
-	background: rgba(231, 233, 236, 0.4);
+	background: #6798e6;
 
 	backdrop-filter: blur(1px);
 
@@ -23,7 +23,7 @@
 		justify-content: center;
 		align-items: center;
 		// background-color: #6c75841f;
-		background: rgba(231, 233, 236, 0.1);
+		background: #6798e6;
 		border: none;
 		margin-right: 6px;
 	}
