--- a/src/Features/Structural/NavBar/Components/Profile/Profile.module.scss
+++ b/src/Features/Structural/NavBar/Components/Profile/Profile.module.scss
@@ -8,7 +8,7 @@
 
 	border-radius: 99px;
 	border: 1px solid #fff;
-	background: rgba(255, 255, 255, 0.04);
+	background: white;
 	backdrop-filter: blur(1px);
 
 	.badge {
