--- a/src/Features/Structural/NavBar/Components/NotificationsHub/NotificationHub.module.scss
+++ b/src/Features/Structural/NavBar/Components/NotificationsHub/NotificationHub.module.scss
@@ -8,11 +8,11 @@
 
 	border-radius: 99px;
 	border: 1px solid rgba(95, 104, 119, 0.1);
-	background: rgba(255, 255, 255, 0.04);
+	background: white;
 
 	backdrop-filter: blur(1px);
 
-	background: rgba(255, 255, 255, 0.04);
+	background: white;
 	backdrop-filter: blur(1px);
 
 	.badge {
